--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -10,14 +10,22 @@ ul{
 .navbar{
     display:flex;
     justify-content: space-between;
+    background-color: black;
+    color: white;
     border:1px solid black;
   
 }
 
-.logo{
-    background-image:url(../img/foo-fighters-logo.png);
-    width:30px;
-    height:30px;
+.logo {
+    float: left;
+    padding-top: 5px;
+    padding-left: 5px;
+}
+
+.logo img {
+    width: 70px;
+    height: 70px;
+    background-color: white;
 }
 .options{
     display:flex;
@@ -26,6 +34,7 @@ ul{
 .navbar .options li a {
     display:flex;
     justify-content:center;
+    font-size: 20px;
     padding:20px 20px;
     border:1px solid black;
 }
