--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Metal Mania', cursive;
 }
 
 html{
@@ -13,17 +14,21 @@ ul {
     list-style: none
 }
 
+.title{
+    position:absolute;
+    margin:auto;
+    color:rgb(145, 30, 30);
+}
 .navbar {
     display: flex;
     justify-content: space-between;
-    background-color: black;
-    color: white;
-    border: 1px solid black;
+
+
 }
 
 .navbar a{
     text-decoration: none;
-    color:white;
+    color:black;
 }
 
 .logo {
@@ -35,7 +40,6 @@ ul {
 .logo img {
     width: 70px;
     height: 70px;
-    background-color: white;
 }
 
 .options {
@@ -47,8 +51,9 @@ ul {
     justify-content: center;
     font-size: 20px;
     padding: 20px 20px;
-    border: 1px solid black;
+  
 }
+
 
 .banner {
     background-image: url(../img/Foo-Fighters-1.jpg);
