--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -6,6 +6,8 @@
 
 html{
     scroll-behavior: smooth;
+    max-width:100%;
+    width:100%;
 }
 
 
@@ -15,9 +17,13 @@ ul {
 }
 
 .title{
-    position:absolute;
+    position: absolute;;
+    top:40%;
+    left:40%;
     margin:auto;
-    color:rgb(145, 30, 30);
+    color:rgb(233, 53, 53);
+    text-decoration: bold;
+    font-size:50px;
 }
 .navbar {
     display: flex;
@@ -51,11 +57,17 @@ ul {
     justify-content: center;
     font-size: 20px;
     padding: 20px 20px;
-  
+}
+
+.navbar .options li a:hover {
+
+    border-bottom:1px solid red;
 }
 
 
+
 .banner {
+    opacity: 0.8;
     background-image: url(../img/Foo-Fighters-1.jpg);
     height: 600px;
     background-repeat: no-repeat;
@@ -72,35 +84,11 @@ ul {
     font-size: 20px;
 }
 
-.albumes {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.albums {
+    max-width:100%;
+    width:100%;
 }
 
-.albumes h2 {
-    font-size: 50px;
-    margin-bottom: 15px;
-}
-
-.albumes li {
-    display: flex;
-    justify-content: center;
-}
-
-.albumes ul {
-    max-width: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-}
-
-.album div {
-    width: 200px;
-    height: 250px;
-    border-radius: 10px;
-    border: 1px solid black;
-}
 
 .integrantes {
     display: flex;
@@ -131,6 +119,9 @@ ul {
     border-radius: 10px;
     border: 1px solid black;
 }
+
+
+
 
 .footer {
     background-color: black;
