--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,129 +1,148 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Metal Mania', cursive;
+  margin: 0;
+  padding: 0;
+  font-family: "Metal Mania", cursive;
 }
 
-html{
-    scroll-behavior: smooth;
-    max-width:100%;
-    width:100%;
+html {
+  scroll-behavior: smooth;
+  max-width: 100%;
+  width: 100%;
 }
-
-
 
 ul {
-    list-style: none
+  list-style: none;
 }
 
-.title{
-    position: absolute;;
-    top:40%;
-    left:40%;
-    margin:auto;
-    color:rgb(233, 53, 53);
-    text-decoration: bold;
-    font-size:50px;
+.title {
+  position: absolute;
+  top: 45%;
+  left: 20%;
+  margin: auto;
+  color: rgb(145, 30, 30);
+  text-decoration: bold;
+  font-size: 150px;
 }
+
 .navbar {
-    display: flex;
-    justify-content: space-between;
-
-
+  display: flex;
+  justify-content: space-between;
 }
 
-.navbar a{
-    text-decoration: none;
-    color:black;
+.navbar a {
+  text-decoration: none;
+  color: black;
 }
 
 .logo {
-    float: left;
-    padding-top: 5px;
-    padding-left: 5px;
+  float: left;
+  padding-top: 5px;
+  padding-left: 5px;
 }
 
 .logo img {
-    width: 70px;
-    height: 70px;
+  width: 70px;
+  height: 70px;
 }
 
 .options {
-    display: flex;
+  display: flex;
 }
 
 .navbar .options li a {
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-    padding: 20px 20px;
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  padding: 20px 20px;
 }
 
 .navbar .options li a:hover {
-
-    border-bottom:1px solid red;
+  border-bottom: 1px solid red;
 }
 
-
-
 .banner {
-    opacity: 0.8;
-    background-image: url(../img/Foo-Fighters-1.jpg);
-    height: 600px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: auto;
+  opacity: 0.8;
+  background-image: url(../img/Foo-Fighters-1.jpg);
+  height: 600px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: auto;
 }
 
 .historia {
-    padding: 2% 2%;
+  padding: 2% 2%;
 }
 
 .historia p {
-    text-align: justify;
-    font-size: 20px;
+  text-align: justify;
+  font-size: 20px;
 }
 
 .albums {
-    max-width:100%;
-    width:100%;
+  max-width: 100%;
+  width: 100%;
 }
 
-
 .integrantes {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .integrantes h2 {
-    font-size: 50px;
-    margin-bottom: 15px;
+  font-size: 50px;
+  margin-bottom: 15px;
 }
 
 .integrantes li {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .integrantes ul {
-    max-width: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+  max-width: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
 }
 
 .integrantes div {
-    width: 200px;
-    height: 250px;
-    border-radius: 10px;
-    border: 1px solid black;
+  width: 200px;
+  height: 250px;
+  border-radius: 10px;
+  border: 1px solid black;
 }
 
-
-
-
 .footer {
-    background-color: black;
-    color: white;
+  background-color: black;
+  color: white;
+}
+
+/*integrantes*/
+.vm {
+  width: 300px;
+  margin: 0 auto;
+}
+
+.botonVM {
+  width: 90px;
+  height: 50px;
+  background-color: black;
+  border-radius: 50px;
+  padding: 5px;
+  margin-left: 20px;
+  text-align: center;
+  line-height: 40px; /* para hacer espaciado entre lineas de texto */
+}
+.botonVM a {
+  color: white;
+  margin-top: 25;
+  text-decoration: none;
+}
+
+.botonVM:hover {
+  opacity: 0.5;
+}
+.tablaVM .tdVM {
+  padding: 50px;
 }
