--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -81,10 +81,19 @@ img {
 }
 
 .albums {
+
+  text-align:center;
   max-width: 100%;
-  width: 100%;
+  padding:1.5%;
 }
 
+
+
+
+
+.albums h2{
+  font-size:50px
+}
 .integrantes {
   display: flex;
   align-items: center;
@@ -96,24 +105,14 @@ img {
   margin-bottom: 15px;
 }
 
-.integrantes li {
-  display: flex;
-  justify-content: center;
+.integrantes {
+  width:90%;
 }
 
-.integrantes ul {
-  max-width: 100%;
-  width: 100%;
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-}
 
-.integrantes div {
-  width: 200px;
-  height: 250px;
-  border-radius: 10px;
-  border: 1px solid black;
-}
+
+
+
 
 .footer {
   background-color: black;
@@ -122,7 +121,7 @@ img {
 
 /*integrantes*/
 .vm {
-  width: 300px;
+  width: 210px;
   margin: 0 auto;
 }
 
